# Rating_Systems_Data_Sources

./: pyproject.toml
src/ratingsystems/data/: __init__.py  cbb.py
src/ratingsystems/data/model/: __init__.py  basketball.py
src/ratingsystems_data.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
