[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ratingsystems-data"
version = "0.1.0"
dependencies = [
    "ratingsystems~=0.0",
    "cbbd~=1.23",
    "cfbd~=5.13",
]
requires-python = ">=3.11"
authors = []
maintainers = []
description = "Library for data sources for rating systems"

[tool.setuptools.packages.find]
where = ["src/"]
include = ["ratingsystems.data*"]
namespaces = true

[project.entry-points.ratingsystems]
cbb = "ratingsystems.data:CBBDataSource"
